# RecoGUI

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  index.html  lint-staged.config.ts  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: application-design.md  change-log.md  implementation-tasks.md  requirements.md  validation.md
fixtures/native/: audio-normalize-cases.json  export-cases.json  schema-v5.sql  vad-cases.json
fixtures/rasr-v1/: frames.json
protocol/: reco-protocol.schema.json
protocol/fixtures/: event.queue-changed.json  event.segment-persisted.json  request.engine-get-state.json  request.model-select.json  request.queue-enqueue-files.json  response.engine-get-state.json  response.model-get-state.json  response.model-list.json  response.queue-get-state.json
protocol/invalid-fixtures/: event.invalid-sequence.json  request.missing-request-id.json  response.protocol-mismatch.json
scripts/: validate-protocol.mjs
src/: App.css  App.test.tsx  App.tsx  appPreferences.test.ts  appPreferences.ts  bridge.test.ts  bridge.ts  errorMessage.ts  eventSequence.test.ts  eventSequence.ts  mockData.ts  protocolFixtures.test.ts  sessionState.test.ts  sessionState.ts  types.ts  useApplicationCore.test.tsx  useApplicationCore.ts  useEngineEvents.test.tsx  useEngineEvents.ts
src-python/: .gitignore  LICENSE  README.md  SOURCE.md  THIRD_PARTY_NOTICES.md  build_sidecar.py  build_worker.py  pyproject.toml
src-python/docs/: architecture.md  evaluation.md
src-python/src/: __main__.py
src-python/src/reco/: __init__.py  audio.py  config.py  core_audio.py  engine.py  errors.py  evaluation.py  host_pcm.py  main.py  model_manager.py  models.py  pipeline.py  protocol.py  recording.py  repository.py  sidecar.py  transcription.py  ui.py  vad.py
src-python/src/reco/assets/: README.md
src-python/src/reco_worker/: __init__.py  __main__.py  config.py  errors.py  model_catalog.py  models.py  protocol.py  transcription.py  worker.py
src-python/tests/: conftest.py  test_asr_protocol.py  test_asr_worker.py  test_audio.py  test_build_sidecar.py  test_build_worker.py  test_config.py  test_engine_events.py  test_evaluation.py  test_host_pcm.py  test_main.py  test_model_catalog.py  test_model_manager.py  test_models.py  test_pipeline.py  test_protocol.py  test_recording.py  test_repository.py  test_sidecar_contract.py  test_transcription.py  test_ui.py  test_vad.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: reco-engine
src-tauri/src/: api_types.rs  app_events.rs  application_commands.rs  bindings.rs  close_handshake.rs  commands.rs  file_tokens.rs  lib.rs  main.rs  native_export.rs  paths.rs  protocol.rs  supervisor.rs  system_sleep.rs
src-tauri/src/application_core/: config.rs  contract.rs  core.rs  domain.rs  error.rs  mod.rs  pipeline.rs  store.rs
src-tauri/src/application_core/media/: decode.rs  fingerprint.rs  mod.rs  normalize.rs
src-tauri/src/application_core/vad/: mod.rs  segmenter.rs  silero.rs
src-tauri/src/application_core/worker/: mod.rs  process.rs  protocol.rs  supervisor.rs
src-tauri/src/audio_capture/: microphone.rs  mod.rs  normalize.rs  process_tap.rs  wire.rs
