[package]
name = "reco-gui"
version = "0.1.0"
description = "Native host for RecoGUI"
authors = ["ph0ryn"]
edition = "2024"
default-run = "reco-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reco_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
command-fds = { version = "0.3.3", features = ["tokio"] }
uuid = { version = "1", features = ["v4", "serde"] }
rfd = "0.15"
cpal = "0.18.1"
rtrb = "0.3.4"
rubato = "4.0.0"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled", "serde_json", "uuid"] }
sha2 = "0.10.9"
symphonia = { version = "0.6.0", default-features = false, features = ["aac", "adpcm", "aiff", "alac", "all-meta", "caf", "flac", "isomp4", "mp3", "ogg", "opt-simd-neon", "pcm", "vorbis", "wav"] }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native", "api-24"] }
time = { version = "0.3.53", features = ["formatting", "macros"] }
zip = "=8.6.0"

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWorkspace"] }
objc2-av-foundation = { version = "0.3.2", default-features = false, features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
objc2-core-audio = { version = "0.3.2", default-features = false, features = ["AudioHardware", "block2", "dispatch2", "objc2", "objc2-core-audio-types", "objc2-foundation", "std"] }
objc2-core-audio-types = "0.3.2"
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["CFDictionary"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["block2", "NSArray", "NSDictionary", "NSNotification", "NSOperation", "NSUUID"] }
